infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      authPod: auth
  template:
    metadata:
      labels:
        authPod: auth
    spec:
      containers:
        - name: auth
          image: danxy1234/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-clusterip-service
spec:
  type: ClusterIP
  selector:
    authPod: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
