infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-pod
  template:
    metadata:
      labels:
        app: orders-pod
    spec:
      containers:
        - name: orders-deployment
          image: danxy1234/orders
---
apiVersion: v1
kind: Service
metadata:
  name: order-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: orders-pod
  ports:
    - name: order
      protocol: TCP
      port: 4000
      targetPort: 4000
