infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-pod
  template:
    metadata:
      labels:
        app: payments-pod
    spec:
      containers:
        - name: payments
          image: danxy1234/payments
---
apiVersion: v1
kind: Service
metadata:
  name: payments-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: payments-pod
  ports:
    - name: payments
      protocol: TCP
      targetPort: 4000
      port: 4000
