infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets-pod
  template:
    metadata:
      labels:
        app: tickets-pod
    spec:
      containers:
        - name: tickets
          image: danxy1234/tickets
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: tickets-pod
  ports:
    - name: tickets
      protocol: TCP
      port: 4000
      targetPort: 4000
