infra/k8s/tickets.mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      ticketsMongoPod: tickets-mongo
  template:
    metadata:
      labels:
        ticketsMongoPod: tickets-mongo
    spec:
      containers:
        - name: tickets-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-service
spec:
  type: ClusterIP
  selector:
    ticketsMongoPod: tickets-mongo
  ports:
    - name: tickets-mongo-db
      protocol: TCP
      port: 27017
      targetPort: 27017
